--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -1,7 +1,7 @@
 = form_tag videos_index_path, :method => :post do
   %div
     = label_tag "search for:"
-    = text_field_tag "query"
+    = text_field_tag "query", "", :style => "font-size: 55px;"
 
   %div
     = submit_tag "Submit"
@@ -11,7 +11,7 @@
   -@videos.each do |v|
     %div
       %div
-        %h2= link_to v["title"], videos_add_to_queue_path(:id =>v["id"])
+        %h1= link_to v["title"], videos_add_to_queue_path(:id =>v["id"])
       %iframe{:allowscriptaccess => "always", :allowFullScreen => "true", |
       :frameborder => "0", :height => "215", :src => "//www.youtube.com/embed/#{v["id"]}", |
       :title => "YouTube video player", :width => "320"}
