--- a/app/views/songs/play.html.erb
+++ b/app/views/songs/play.html.erb
@@ -1,10 +1,3 @@
-<% if @current.nil? %>
-  No queued songs
-<% else %>
-  <div id="player"></div>
-<% end %>
-
-
 <script src="http://www.youtube.com/player_api"></script>
 
 <script>
@@ -35,4 +28,20 @@
         }
     }
 
+    function reloadNoSongs() {
+      setTimeout(function(){
+         location.reload();
+      }, 5000);
+    }
+
 </script>
+
+
+<% if @current.nil? %>
+  No queued songs
+  <script>
+    $( document ).ready( reloadNoSongs() )
+  </script>
+<% else %>
+  <div id="player"></div>
+<% end %>
