--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row" style="margin: 0 auto;">
   <div class="span-12">
-    <h2>27 Confederation</h2>
+    <label for="query"><h2>27 Confederation</h2></label>
     <%= form_tag videos_index_path, :method => :post, :class => "form-search" do %>
-      <%= text_field_tag "query", "", :class => "input-medium search-query" %>
+      <%= text_field_tag "query", "", :class => "input-medium search-query", :autofocus => "autofocus" %>
       <%= submit_tag "Search", :class => "btn" %>
     <% end %>
     <% if @videos %>
