--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
     <body>
 
   <div class="container">
+    <div class="navbar">
+      <div class="navbar-inner">
+        <%= link_to("27 Confederation", root_path, :class => "brand") %>
+        <ul class="nav">
+          <li class="divider-vertical"></li>
+          <li><%= link_to("Play", play_songs_path) %></li>
+          <li><%= link_to("Search", root_path) %></li>
+        </ul>
+      </div>
+    </div>
     <%= yield %>
   </div>
 
