--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,6 +1,16 @@
-<div class="row" style="margin: 0 auto;">
+<div class="row">
   <div class="span-12">
-    <label for="query"><h2>27 Confederation</h2></label>
+    <% unless @queued.empty? %>
+      <h4><%= pluralize(@queued.count, "song") %> in the queue. <%= link_to_function("Show?", "$('#queue-section').toggle()") %> <%= link_to("Play?", play_songs_path) %></h4>
+      <div id="queue-section" style="display:none;">
+        <ol>
+          <% @queued.each do |song| %>
+            <li><%= song.title %></li>
+          <% end %>
+        </ol>
+      </div>
+    <% end %>
+    <label for="query"><h3>Search on YouTube</h3></label>
     <%= form_tag videos_index_path, :method => :post, :class => "form-search" do %>
       <%= text_field_tag "query", "", :class => "input-medium search-query", :autofocus => "autofocus" %>
       <%= submit_tag "Search", :class => "btn" %>
@@ -10,8 +20,8 @@
         <div>
           <div>
             <h2>
-              <%= link_to v["title"], videos_add_to_queue_path(:id =>v["id"]) %>
-              <%= link_to "Add", videos_add_to_queue_path(:id =>v["id"]), :class => "btn" %>
+              <%= link_to v["title"], videos_add_to_queue_path(:youtube_id =>v["id"], :title => v["title"]) %>
+              <%= link_to "Add", videos_add_to_queue_path(:youtube_id =>v["id"], :title => v["title"]), :class => "btn" %>
             </h2>
           </div>
           <iframe allowFullScreen="true" allowscriptaccess="always" frameborder="0" height="215" src="//www.youtube.com/embed/#{v["id"]}" title="YouTube video player" width="320"></iframe>
