--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,23 @@
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, intial-scale=1">
   </head>
     <body>
 
-  <div class="container">
-    <div class="navbar">
-      <div class="navbar-inner">
-        <%= link_to("27 Confederation", root_path, :class => "brand") %>
-        <ul class="nav">
-          <li class="divider-vertical"></li>
-          <li><%= link_to("Play", play_songs_path) %></li>
-          <li><%= link_to("Search", root_path) %></li>
-        </ul>
+      <div class="navbar">
+        <div class="navbar-inner">
+          <%= link_to("27 Confederation", root_path, :class => "brand") %>
+          <ul class="nav">
+            <li class="divider-vertical"></li>
+            <li><%= link_to("Play", play_songs_path) %></li>
+            <li><%= link_to("Search", root_path) %></li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <%= yield %>
-  </div>
+      <div class="container">
+        <%= yield %>
+      </div>
 
   </body>
 </html>
