--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
   <body>
     <div class="navbar">
       <div class="navbar-inner">
-        <%= link_to("27 Confederation", root_path, :class => "brand") %>
+        <%= link_to("<i class='icon-home'></i>".html_safe, root_path, :class => "brand") %>
         <ul class="nav">
           <li class="divider-vertical"></li>
           <li><%= link_to("Play", play_songs_path) %></li>
+          <li class="divider-vertical"></li>
           <li><%= link_to("Search", root_path) %></li>
         </ul>
       </div>
