--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -19,10 +19,10 @@
       <% @videos.each do |v| %>
         <div>
           <div>
-            <h2>
+            <strong>
               <%= link_to v["title"], videos_add_to_queue_path(:youtube_id =>v["id"], :title => v["title"]) %>
+            </strong>
               <%= link_to "Add", videos_add_to_queue_path(:youtube_id =>v["id"], :title => v["title"]), :class => "btn" %>
-            </h2>
           </div>
           <iframe allowFullScreen="true" allowscriptaccess="always" frameborder="0" height="215" src="//www.youtube.com/embed/#{v["id"]}" title="YouTube video player" width="320"></iframe>
         </div>
