--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
           <li><%= link_to("Play", play_songs_path) %></li>
           <li class="divider-vertical"></li>
           <li><%= link_to("Search", root_path) %></li>
+          <li class="divider-vertical"></li>
+          <li><%= link_to("Most played 5", songs_path) %></li>
         </ul>
       </div>
     </div>
