change text to star

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <li class="divider-vertical"></li>
           <li><%= link_to("Search", root_path) %></li>
           <li class="divider-vertical"></li>
-          <li><%= link_to("Most played 5", songs_path) %></li>
+          <li><%= link_to("<i class='icon-star'></i>".html_safe, songs_path) %></li>
         </ul>
       </div>
     </div>
