--- a/app/views/songs/play.html.erb
+++ b/app/views/songs/play.html.erb
@@ -1,3 +1,14 @@
+<% content_for :head do %>
+  <script src="http://js.pusher.com/2.2/pusher.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    var pusher = new Pusher("<%= ENV['PUSHER_KEY'] %>");
+    var channel = pusher.subscribe('songs');
+    channel.bind('next', function(data) {
+      location.reload();
+    });
+  </script>
+<% end %>
+
 <script src="http://www.youtube.com/player_api"></script>
 
 <script>
