--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
         <%= link_to("<i class='icon-home'></i>".html_safe, root_path, :class => "brand") %>
         <ul class="nav">
           <li class="divider-vertical"></li>
-          <li><%= link_to("Play", play_songs_path) %></li>
+          <li><%= link_to("<i class='icon-play'></i>".html_safe, play_songs_path) %></li>
           <li class="divider-vertical"></li>
-          <li><%= link_to("Search", root_path) %></li>
+          <li><%= link_to("<i class='icon-search'></i>".html_safe, root_path) %></li>
           <li class="divider-vertical"></li>
           <li><%= link_to("<i class='icon-star'></i>".html_safe, songs_path) %></li>
         </ul>
