add next song button to interface

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
           <li><%= link_to("<i class='icon-search'></i>".html_safe, root_path) %></li>
           <li class="divider-vertical"></li>
           <li><%= link_to("<i class='icon-star'></i>".html_safe, songs_path) %></li>
+          <li class="divider-vertical"></li>
+          <li><%= link_to("<i class='icon-step-forward'></i>".html_safe, next_songs_path) %></li>
         </ul>
       </div>
     </div>
